--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/scout": "^9.4",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.4",
-        "protonemedia/laravel-cross-eloquent-search": "^3.0"
+        "laravel/ui": "^3.4"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
